# Light-Show-Engine

./: .gitignore  .gitmodules  AdventuresOfLolo.VC.opendb  CMakeLists.txt  CMakeSettings.json  DoxyFile  Engine_Information_For_Multi_Platform.txt  GNSConfig.cmake  GTestConfig.cmake  LightShowEngine.sln  Lua53Config.cmake  README.md  RoboCopyAssets.bat  watch-assets.bat
LightShowEngine/: 3DM_Info.h  AnimatedMesh.h  AnimatedModel.cpp  AnimatedModel.h  AnimationKeys.h  Application.cpp  Application.h  BoneCollisionMesh.cpp  BoneCollisionMesh.h  BoneCollisionMeshSystem.cpp  BoneCollisionMeshSystem.h  Camera.h  CollisionMesh.cpp  CollisionMesh.h  CollisionTag.cpp  CollisionTag.h  Component.h  ControllerRayCollision.cpp  ControllerRayCollision.h  Cube.h  DayNightCycleSystem.h  Debug.h  DebugDrawer.cpp  DebugDrawer.h  DebuggingController.cpp  DebuggingController.h  DirectionalLightShadowMap.cpp  DirectionalLightShadowMap.h  DisplayStatistics.h  DisplayStatisticsSystem.h  EnemyController.cpp  EnemyController.h  EnemyControllerSystem.cpp  EnemyControllerSystem.h  EngineCodeFormatInformation.txt  EntityStats.h  EntityStatsDisplayerSystem.h  EntityTransform.h  FirstPersonCamera.h  FirstPersonCameraSystem.cpp  (+98 more)
LightShowEngine/Assets/Models/: bob.3DMA  bobby.3DMA  cube.3DM  testLevel_cm.3DM  testlevel.3DM
LightShowEngine/Assets/Shaders/: AnimatedLit.v  BasicAnimated.f  BasicAnimatedVertexShader.shdr  BasicVertexShader.shdr  Color.f  Color.v  DepthMapTest.f  DepthMapTest.v  DiffuseColor.f  DirectionalLightShadowMapAnimated.v  FloorShader.f  GUIShader.f  GUIShader.v  (+12 more)
assets/Fonts/: DefaultFont.FontDat  OutputForMyFont.txt  OutputForSansFont1.txt  myFont.FontDat
assets/Models/: ChestExported.3DMA  TestLevel _cm.3DM  chest.3DM  chest.3DMA  playerTest.3DM  t.3DM  testDummy.3DMA  testMesh.3DM  testlevel.3DM
assets/Shaders/: AnimatedLitVertexShader.shdr  BasicAnimated.f  BasicAnimated.v  BasicFragmentShader.shdr  Color.v  DepthMapTest.f  DepthMapTest.v  DiffuseColor.f  DiffuseFragmentShader.shdr  FloorShader.f  FragmentColorShader.shdr  ParticleShader.v  Phong.f  PhongFragmentColorShader.shdr  PointLightDepthMap.f  PointLightDepthMap.g  PointLightDepthMapAnimated.v  UnLitVertexShader.shdr  VertexColorShader.shdr  lit.v
assets/fonts/: courier-new.FontDat
assets/scripts/: main.lua
assets/shaders/: animated-lit.vert  color.frag  color.vert  depth.frag  depth.vert  directional-light-shadow-map.vert  floor-shader.frag  gui-shader.vert  lit.vert  particle-shader.frag  particle-shader.vert  phong-color.frag  phong-diffuse-specular.frag  point-light-depth-map.frag  point-light-depth-map.geom  point-light-depth-map.vert  render-texture-ms.frag  render-texture.frag  render-texture.vert  sky-box.frag  skybox.frag  skybox.vert
docs/: Nodes.xml  Tokens.xml  annotated.html  annotated_dup.js  classes.html  dir_0eb5bc4df32830927d4599d5e42d522d.html  dir_0eb5bc4df32830927d4599d5e42d522d.js  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_1699be727a800b1d059c6f7f2b91d2ee.js  dir_2052808828190f934b76e979ee65af8a.html  dir_2052808828190f934b76e979ee65af8a.js  dir_3485699fbd19779a6361faab2c06e7f2.html  dir_3485699fbd19779a6361faab2c06e7f2.js  dir_3dee9bebfe27df2508b29716d202d3ff.html  dir_3dee9bebfe27df2508b29716d202d3ff.js  dir_46fb37fa78f646487908f22377b88dd8.html  dir_46fb37fa78f646487908f22377b88dd8.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_700ffb9a085d97b5eaa7159a34e389e5.html  dir_700ffb9a085d97b5eaa7159a34e389e5.js  dir_989a80891cb99f10dc32e2f15752cf43.html  dir_989a80891cb99f10dc32e2f15752cf43.js  dir_a5f74f5d785ec5e5a721a58d25c88c44.html  dir_a5f74f5d785ec5e5a721a58d25c88c44.js  dir_ad088693941fd850abe988de33bc09e8.html  dir_ad088693941fd850abe988de33bc09e8.js  dir_c120d2c500102c89fd3c647687fe59aa.html  dir_c120d2c500102c89fd3c647687fe59aa.js  dir_d1b0978795960abe46c1156044e7286d.html  dir_d1b0978795960abe46c1156044e7286d.js  dir_d8c59418d1394fea433c3db997f4cd36.html  dir_d8c59418d1394fea433c3db997f4cd36.js  dir_def8a6fa26fd21ac3ee8ed00050a517f.html  dir_def8a6fa26fd21ac3ee8ed00050a517f.js  dir_e0b39afe89996dcd66b9996615fec493.html  dir_e0b39afe89996dcd66b9996615fec493.js  dir_ea91f20821427155bebd6a692e01ce3a.html  dir_ea91f20821427155bebd6a692e01ce3a.js  files.html  (+207 more)
docs/html/: Info.plist  Tokens.xml  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_k.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_q.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_u.html  functions_func_v.html  functions_func_w.html  functions_func_~.html  functions_g.html  functions_h.html  functions_i.html  (+205 more)
docs/search/: search.idx
src/: .clang-format  AnimatedModel.cpp  AnimatedModel.h  AnimationKeys.h  Application.cpp  Application.h  BoneCollisionMesh.cpp  BoneCollisionMeshSystem.cpp  BoneCollisionMeshSystem.h  Camera.h  CameraSystem.h  CollisionMesh.cpp  CollisionMesh.h  CollisionTag.cpp  CollisionTag.h  Component.h  ControllerRayCollision.h  Cube.h  DayNightCycleSystem.h  Debug.h  DebugDrawer.cpp  DebugDrawer.h  DebuggingController.cpp  DebuggingController.h  DebuggingSystem.h  DirectionalLightShadowMap.cpp  DirectionalLightShadowMap.h  DisplayStatistics.h  DisplayStatisticsSystem.h  EnemyController.cpp  EnemyController.h  EnemyControllerSystem.cpp  EnemyControllerSystem.h  EntityStatsDisplayerSystem.h  EntityTests.cpp  EntityTests.h  FirstPersonCamera.h  FixedUpdatingSystem.cpp  FixedUpdatingSystem.h  FountainParticleEmitter.cpp  (+84 more)
src/engine/: Component.cpp  Game.cpp  Game.h  GameState.h  SystemVitals.h  UniqueVectors.h
tests/: example.cpp  main.cpp
(+3954 files in other folders)
